fixed margin on mobile

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body {
 #main-grid {
     margin: 100px 50px 0px 50px;
     display: grid;
-    height: calc(100vh-50px);
-    width: calc(100vw-50px);
+    height: auto;
+    width: auto;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr auto;
     align-items: center;
@@ -26,13 +26,6 @@ body {
 @media screen and (max-width: 500px) {
     #main-grid {
         margin: 0;
-        display: grid;
-        height: calc(100vh-50px);
-        width: calc(100vw-50px);
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr auto;
-        align-items: center;
-        justify-items: center;
     }
 }
 
